--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <p>توسعه دهنده فرانت اند وب</p>
             <p>...</p>
             <div>
-            <a href="http://twitter.com/bookovsky95"><i class="fa fa-twitter"></i></a>
-            <a href="http://instagram.com/bookovsky95"><i class="fa fa-instagram"></i></a>
+            <a href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+            <a href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/nastaran-heydari-782264b5/"><i class="fa fa-linkedin"></i></a>
-            <a href="http://www.medium.com/nh74"><i class="fa fa-medium"></i></a>
+            <a href="http://www.medium.com/"><i class="fa fa-medium"></i></a>
             <a href="http://github.com/noonhe"><i class="fa fa-github"></i></a>
             <a href="mailto:nastaran.heydari74@gmail.com"><i class="fa fa-envelope-o"></i></a>
             </div>
